@@ -7,6 +7,8 @@ META.json
 META.yml
 README
 dist.json
+lib/Crypt/Passphrase/HSM.pm
 lib/Crypt/Passphrase/Pepper/HSM.pm
 t/lib/Crypt/Passphrase/Reversed.pm
+t/hash.t
 t/peppered.t
