@@ -30,6 +30,7 @@
             "Crypt::HSM" : "0",
             "Crypt::Passphrase" : "0",
             "Crypt::Passphrase::Pepper::Base" : "0",
+            "MIME::Base64" : "0",
             "parent" : "0",
             "strict" : "0",
             "warnings" : "0"
@@ -44,6 +45,10 @@
       }
    },
    "provides" : {
+      "Crypt::Passphrase::HSM" : {
+         "file" : "lib/Crypt/Passphrase/HSM.pm",
+         "version" : "0.001"
+      },
       "Crypt::Passphrase::Pepper::HSM" : {
          "file" : "lib/Crypt/Passphrase/Pepper/HSM.pm",
          "version" : "0.001"
