@@ -16,6 +16,9 @@ meta-spec:
   version: '1.4'
 name: Crypt-Passphrase-Pepper-HSM
 provides:
+  Crypt::Passphrase::HSM:
+    file: lib/Crypt/Passphrase/HSM.pm
+    version: '0.001'
   Crypt::Passphrase::Pepper::HSM:
     file: lib/Crypt/Passphrase/Pepper/HSM.pm
     version: '0.001'
@@ -24,6 +27,7 @@ requires:
   Crypt::HSM: '0'
   Crypt::Passphrase: '0'
   Crypt::Passphrase::Pepper::Base: '0'
+  MIME::Base64: '0'
   parent: '0'
   strict: '0'
   warnings: '0'
